# discord-bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  main.rs  markov.rs  strings.rs
src/bot/: client.rs  message.rs  types.rs
